# aws-auth-operator

./: .coverage  .gitignore  CODEOWNERS  Dockerfile  Pipfile  README.md  aws_auth.py  crds.yaml  pyproject.toml  renovate.json  requirements.txt  test.yaml
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
example/: test.yaml
helm/: helmfile.yaml  template.yaml
helm/aws-auth-operator/: Chart.yaml  values.yaml
helm/aws-auth-operator/templates/: _helpers.yaml  alerts.yaml  configmap.yaml  deployment.yaml  rbac.yaml  serviceaccount.yaml  servicemonitor.yaml
helm/environments/ops/: values.yaml
helm/environments/stage/: values.yaml
lib/: __init__.py  constants.py  crd.py  mappings.py  services.py  worker.py
tests/: pytest.ini  test_mapping.py  test_operator.py  test_services.py  test_worker.py
