[tool.poetry]
name = "aws-auth-operator"
version = "0.1.0"
description = ""
authors = ["Daniel Hahn <daniel.hahn@tier.app>"]
readme = "README.md"
packages = [{include = "aws_auth_operator"}]

[tool.poetry.dependencies]
python = "^3.7"
kopf = "^1.36.1"
kubernetes = "^26.1.0"
pyyaml = "^6.0"
dictdiffer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
